; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/mtk-vcodec/extr_mtk_vcodec_util.c_mtk_vcodec_set_curr_ctx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/mtk-vcodec/extr_mtk_vcodec_util.c_mtk_vcodec_set_curr_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_vcodec_dev = type { i32, %struct.mtk_vcodec_ctx* }
%struct.mtk_vcodec_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mtk_vcodec_set_curr_ctx(%struct.mtk_vcodec_dev* %0, %struct.mtk_vcodec_ctx* %1) #0 {
  %3 = alloca %struct.mtk_vcodec_dev*, align 8
  %4 = alloca %struct.mtk_vcodec_ctx*, align 8
  %5 = alloca i64, align 8
  store %struct.mtk_vcodec_dev* %0, %struct.mtk_vcodec_dev** %3, align 8
  store %struct.mtk_vcodec_ctx* %1, %struct.mtk_vcodec_ctx** %4, align 8
  %6 = load %struct.mtk_vcodec_dev*, %struct.mtk_vcodec_dev** %3, align 8
  %7 = getelementptr inbounds %struct.mtk_vcodec_dev, %struct.mtk_vcodec_dev* %6, i32 0, i32 0
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @spin_lock_irqsave(i32* %7, i64 %8)
  %10 = load %struct.mtk_vcodec_ctx*, %struct.mtk_vcodec_ctx** %4, align 8
  %11 = load %struct.mtk_vcodec_dev*, %struct.mtk_vcodec_dev** %3, align 8
  %12 = getelementptr inbounds %struct.mtk_vcodec_dev, %struct.mtk_vcodec_dev* %11, i32 0, i32 1
  store %struct.mtk_vcodec_ctx* %10, %struct.mtk_vcodec_ctx** %12, align 8
  %13 = load %struct.mtk_vcodec_dev*, %struct.mtk_vcodec_dev** %3, align 8
  %14 = getelementptr inbounds %struct.mtk_vcodec_dev, %struct.mtk_vcodec_dev* %13, i32 0, i32 0
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @spin_unlock_irqrestore(i32* %14, i64 %15)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
